tests/miniJava/neg/006201_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { void if ( 0 ) { } else { } } }
